--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p class="hero-desc" data-i18n="hero_desc">This tool helps you stay calm and prepared during
                         stressful legal moments. Everything works on your phone, even without internet. You stay in
                         control.</p>
-                    <a href="#" class="btn btn-outline" data-i18n="btn_download">Download now</a>
+                    <a href="https://know-your-rights-f6af2.web.app/" class="btn btn-outline" data-i18n="btn_download">Download now</a>
                 </div>
                 <div class="hero-image-desktop">
                     <img src="assets/hero-image-new.jpg"
@@ -153,7 +153,7 @@
                     <h2 data-i18n="cta_title">Download the Free App</h2>
                     <p data-i18n="cta_desc">Get your legal rights and documents organized today. No cost. No signup.
                         Total privacy.</p>
-                    <a href="#" class="btn btn-white" data-i18n="btn_download">Download now</a>
+                    <a href="https://know-your-rights-f6af2.web.app/" class="btn btn-white" data-i18n="btn_download">Download now</a>
                 </div>
             </div>
         </section>
