--- a/policy/index.html
+++ b/policy/index.html
@@ -8,15 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <header class="site-header">
         <div class="container header-container">
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <span class="logo-icon">
-                    <img src="assets/logo-header.png" alt="Balance scale logo" class="header-logo-img">
+                    <img src="../assets/logo-header.png" alt="Balance scale logo" class="header-logo-img">
                 </span>
                 <span class="logo-text">MyRightsNow.org</span>
             </a>
@@ -378,7 +378,7 @@
         <div class="container footer-content">
             <div class="footer-logo-area">
                 <div class="footer-logo-circle">
-                    <img src="assets/logo-footer.png" alt="MG Logo" class="footer-logo-img">
+                    <img src="../assets/logo-footer.png" alt="MG Logo" class="footer-logo-img">
                 </div>
                 <div class="footer-address">
                     <p>Meghan Creative LLC, Oregon, United States</p>
@@ -395,7 +395,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
